--- a/README.rdoc
+++ b/README.rdoc
@@ -9,7 +9,7 @@ The app is run on the anumc server using passenger and apache.
 
 To update and redeploy follow the following steps:
   git pull
-  bundle install
+  bundle install --deployment
   RAILS_ENV=production rake db:migrate
   RAILS_ENV=production rake assets:precompile
   touch tmp/restart
